test/speg_grammar_fixtures/valid/rule_call_underscrore.peg
GRAMMAR url

a -> _;
_ -> "test";
