test/speg_grammar_fixtures/invalid/simple_regex_char_unescaped.peg
GRAMMAR url

test -> "asda";
lowercase -> [a-z]];
